memory leak in JDWP debug agent after calling JVMTI GetAllThreads

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • 16
    • Affects Version/s: 16
    • Component/s: core-svc
    • None
    • b23

      The JVMTI spec says that the array of jthread values returned must be deallocated. There are two places in threadControl.c that don't do that, resulting in a memory leak.

            Assignee:
            Chris Plummer
            Reporter:
            Chris Plummer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: