8255694: memory leak in JDWP debug agent after calling JVMTI GetAllThreads

Reviewed-by: amenkov, sspitsyn